# QueueLab

./: CMakeLists.txt
.github/workflows/: build.yml
gtest/: CMakeLists.txt
include/: ArrList.h  queue.h
src/: main.cpp
tests/: test_queue.cpp
